Asigno estilo a header

--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@
     height: 100vh;
     background-color: blue;
 }
+.header{
+    width: 100%;
+    height: 10%;
+    background-color: green;
+    border-bottom: 1px solid black;
+}
