--- a/style.css
+++ b/style.css
@@ -8,10 +8,15 @@
     width: 100vw;
     height: 100vh;
     background-color: blue;
+    flex-wrap: wrap;
 }
 .header{
     width: 100%;
     height: 10%;
     background-color: green;
-    border-bottom: 1px solid black;
+}
+.center-left{
+    width: 25%;
+    height: 80%;
+    background-color: magenta;
 }
