Asigno estilo a center-rigth

--- a/style.css
+++ b/style.css
@@ -20,3 +20,8 @@
     height: 80%;
     background-color: magenta;
 }
+.center-rigth{
+    width: 75%;
+    height: 80%;
+    background-color: blueviolet;
+}
