--- a/style.css
+++ b/style.css
@@ -25,3 +25,8 @@
     height: 80%;
     background-color: blueviolet;
 }
+.footer{
+    width: 100%;
+    height: 10%;
+    background-color: chocolate;
+}
